# Server_Api/src/swagger/swagger.json
@@ -2614,6 +2614,9 @@
         "money": {
           "type": "number"
         },
+        "animations": {
+          "type": "boolean"
+        },
         "items": {
           "type": "array",
           "items": {
@@ -4044,6 +4047,9 @@
         },
         "money": {
           "type": "number"
+        },
+        "animations": {
+          "type": "boolean"
         },
         "items": {
           "type": "array",
